package org.alfresco.contentstore.protobuf;

option java_package = "org.alfresco.contentstore.protobuf";
option java_outer_classname = "PatchDocumentProtos";

message PatchDocument {
  required int32 block_size = 1;
  required string node_id = 2;

  message Patch {
    required int32 last_match_index = 1;
    required int32 size = 2;
    required bytes buffer = 3;
  }

  repeated int32 matched_blocks = 3;
  repeated Patch patches = 4;
}